:pushpin: Fixed bugs and added more time to sleep

--- a/.env-example
+++ b/.env-example
@@ -13,11 +13,13 @@ MAX_LEVEL_CARDS=
 APPLY_DAILY_ENERGY=
 APPLY_DAILY_TURBO=
 
-SLEEP_BETWEEN_TAP=
+# integer value in seconds
+SLEEP_BETWEEN_TAP=70
+
 USE_PROXY_FROM_FILE=
 
-# Min 1, Max 1200  
-RANDOM_TAPS_COUNT=
+# Min 1, Max 1200
+RANDOM_TAPS_COUNT=[900,1200]
 
-# Min 1, Max 10000  
-RANDOM_MEGA_TAPS_COUNT=
+# Min 1, Max 10000
+RANDOM_MEGA_TAPS_COUNT=[9000,10000]
