--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "testingbot2",
-  "version": "1.0.0",
+  "name": "bunnyapp",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,10 +13,9 @@
     "axios": "^1.7.2",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
-    "input": "^1.0.1",
+    "@inquirer/prompts": "^5.3.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "node": "^20.15.0",
     "socks-proxy-agent": "^8.0.3",
     "strip-ansi": "^7.1.0",
     "telegram": "^2.22.2"
